--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,10 +7,8 @@ Authors@R:
     person("Caroline", "Tang", , "tangmaomao2000@gmail.com", role = c("aut", "cre")),
     person("Chester", "Wang", , "gengxingwang2019@u.northwestern.edu", role = c("aut", "cre"))
     )
-    
 Description: A Python package that enriches spotify users' music experience by allowing them to explore their listening trends via REST APIs implemented for Spotify developers..
-License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
-    license
+License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.1
