--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,10 +4,10 @@ export(filter_playlists)
 export(get_map)
 export(get_new_releases_by_continent)
 export(get_playlists_songs)
-export(get_song_recommendations)
 importFrom(dplyr,filter)
 importFrom(dplyr,select)
 importFrom(spotifyr,get_my_playlists)
 importFrom(spotifyr,get_new_releases)
 importFrom(spotifyr,get_playlist_tracks)
 importFrom(spotifyr,get_spotify_authorization_code)
+importFrom(utils,read.csv)
