--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,8 +16,6 @@ Depends:
     spotifyr,
     dplyr
 Suggests: 
-    testthat (>= 3.0.0)
+    testthat (>= 3.0.0),
+    digest
 Config/testthat/edition: 3
-Imports: 
-    httpuv,
-    spotifyr
