--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,5 +17,8 @@ Depends:
     dplyr
 Suggests: 
     testthat (>= 3.0.0),
-    digest
+    digest,
+    knitr,
+    rmarkdown
 Config/testthat/edition: 3
+VignetteBuilder: knitr
