--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -19,6 +19,7 @@ Suggests:
     testthat (>= 3.0.0),
     digest,
     knitr,
-    rmarkdown
+    rmarkdown,
+    covr
 Config/testthat/edition: 3
 VignetteBuilder: knitr
