--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,7 +14,8 @@ Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
 Depends:
     spotifyr,
-    dplyr
+    dplyr,
+    rlang
 Suggests: 
     testthat (>= 3.0.0),
     digest,
