added package name to function call

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,5 +21,6 @@ importFrom(spotifyr,get_my_top_artists_or_tracks)
 importFrom(spotifyr,get_new_releases)
 importFrom(spotifyr,get_playlist_tracks)
 importFrom(spotifyr,get_recommendations)
+importFrom(spotifyr,get_spotify_access_token)
 importFrom(spotifyr,get_spotify_authorization_code)
 importFrom(utils,read.csv)
