fixed notes from check()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ export(get_song_recommendations)
 export(get_top_artists)
 importFrom(dplyr,filter)
 importFrom(dplyr,select)
+importFrom(rlang,.data)
 importFrom(spotifyr,add_tracks_to_playlist)
 importFrom(spotifyr,create_playlist)
 importFrom(spotifyr,get_my_playlists)
