--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -23,4 +23,7 @@ Suggests:
     rmarkdown,
     covr
 Config/testthat/edition: 3
+URL: https://github.com/UBC-MDS/SpotifyAssistantR,
+    https://ubc-mds.github.io/SpotifyAssistantR/
+BugReports: https://github.com/UBC-MDS/SpotifyAssistantR/issues
 VignetteBuilder: knitr
